[package]
name = "catapult"
version = "0.1.0"
authors = ["Robert Tully <robert.tully@drakon.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
toml = "0.5.6"
log = "0.4"
fern = "0.5"
chrono = "0.4.13"
