[package]
name = "catapult"
version = "0.1.2"
authors = ["Nathaniel Emerson <nath@wyldern.dev>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"

[dev-dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
